# taipan-pytextual

./: .env.example  .gitignore  .python-version  README.md  pyproject.toml  pyrightconfig.json
taipan_textual/: __init__.py  __main__.py  game_state.py  game_ui.py  utils.py
taipan_textual/screens/: __init__.py  bank_screen.py  battle_screen.py  buy_screen.py  complete_travel_screen.py  port_screen.py  quit_screen.py  retire_screen.py  sell_screen.py  setup_screen.py  transfer_screen.py  wheedle_screen.py
tests/: __init__.py  test_quit_screen.py
