[tool.poetry]
name = "taipan-textual"
version = "0.1.0"
description = "A Textual-based application"
authors = ["David Nellis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.20"
textual = "^0.54.0"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
